--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "gpt3",
   "version": "0.1.0",
+  "homepage": "http://noddilumbee.github.io/project_modern_ui_ux_gpt3
+"
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -14,6 +16,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
