--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "gpt3",
   "version": "0.1.0",
-  "homepage": "http://noddilumbee.github.io/project_modern_ui_ux_gpt3
-"
+  "homepage": "http://noddilumbee.github.io/project_modern_ui_ux_gpt3"
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
